# icloud-calendar-mcp

./: .mcp.json  CLAUDE.md  CLI_USAGE.md  IMPLEMENTATION_SUMMARY.md  README.md  devenv.nix  pyproject.toml  secrets.env  server.py  test_caldav_auth.py
docs/: DEPLOYMENT.md
src/: __init__.py  cli.py  providers.py  resources.py  skills.py  tools.py  utils.py
src/icloud_calendar_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
