[project]
name = "ics-icloud-import"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "caldav>=2.0.1",
    "fastmcp==2.12.3",
    "icalendar>=6.0.0",
    "openpyxl>=3.1.5",
    "pytz>=2024.2",
    "xlsxwriter>=3.2.9",
]
