[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "icloud-calendar-mcp"
version = "1.0.0"
description = "iCloud Calendar MCP Server and CLI - Manage your iCloud calendars via CalDAV"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "caldav>=2.0.1",
    "fastmcp==2.12.3",
    "icalendar>=6.0.0",
    "pytz>=2024.2",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
icloud-cal = "src.cli:cli"
